# bevy_no_std_testing

./: Cargo.toml  README.md
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/platform_gba/: Cargo.toml
crates/platform_gba/src/: main.rs
crates/platform_msp430/: Cargo.toml
crates/platform_msp430/.cargo/: config.toml
crates/platform_msp430/src/: main.rs
crates/platform_psx/: Cargo.toml
crates/platform_psx/.cargo/: config.toml
crates/platform_psx/src/: main.rs
crates/platform_switch/: Cargo.toml
crates/platform_switch/.cargo/: config.toml
crates/platform_switch/src/: main.rs
crates/platform_uefi/: .gitignore  Cargo.toml  justfile
crates/platform_uefi/.cargo/: config.toml
crates/platform_uefi/src/: main.rs
