[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
# Compatible Bevy Crates
bevy_utils = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
bevy_tasks = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
bevy_ecs = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
bevy_app = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }

# Other
log = "0.4.21"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"